<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP60_ERROR" Id="{ab7f169a-10a8-441b-aee0-abe5abef3219}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP60_ERROR
VAR
	OP60_StepErr_1: TON;
	OP60_Step_Err_2: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Set ERROR ACTIVE
IF ((OP60_GVL.OP60_ErrorWord_0<>0) OR (OP60_GVL.OP60_ErrorWord_1<>0) OR (OP60_GVL.OP60_ErrorWord_2<>0)) THEN
	OP60_GVL.OP60_ErrorActive:= TRUE;
	END_IF

//Reset ErrorActive
IF (OP60_HMI_Reset OR HMI_Reset) THEN 
	OP60_GVL.OP60_ErrorActive:= FALSE;
	OP60_GVL.OP60_ErrorWord_0:= 0;
	OP60_GVL.OP60_ErrorWord_1:= 0;
	OP60_GVL.OP60_ErrorWord_2:= 0;

END_IF

OP60_ErrorWord_0.0:=SR60_Vert_servo.bAxisError;
OP60_ErrorWord_0.1:=NOT OperationEnable;

// Auto Seq Step Error
//Servo not reaching work position
OP60_StepErr_1(IN:=(OP60_AutoSeq=80) , PT:=T#5S , Q=> , ET=> );
IF (OP60_AutoSeq=80 AND NOT OP60_GVL.OP60_SERVO_ON_WRK_1 AND OP60_StepErr_1.Q) THEN
	OP60_GVL.OP60_ErrorWord_0.2:=TRUE;
END_IF

// Servo Not Reached home position or safe-work position
OP60_Step_Err_2(IN:=OP60_AutoSeq=120 , PT:=T#5S , Q=> , ET=> );
IF (OP60_AutoSeq=120 AND NOT SR60_Vert_servo_ctrl.Axis_In_Home AND OP60_Step_Err_2.Q) THEN
	OP60_GVL.OP60_ErrorWord_0.3:=TRUE;
END_IF

//OP20_StepErr_3(IN:=( OP60_HomeRunning AND (OP60_Homing_Seq=10)), PT:=T#5S , Q=> , ET=> );
//IF OP20_StepErr_3.Q THEN
//	OP20_GVL.OP20_ErrorWord_0.4:=TRUE;
//END_IF]]></ST>
    </Implementation>
    <LineIds Name="OP60_ERROR">
      <LineId Id="3" Count="32" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>