<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP60_MAIN" Id="{dbbde85e-e98e-4cb2-91ee-286d6f583dbd}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP60_MAIN
VAR
	OP60_Modeselection_FB: Mode_Selection_Block1;	
//	OP60_Cycle_Time: Cycle_Time_FB;
	TP_100ms: TP;
	Pulse_100ms: BOOL;
	Times: LREAL;
	reset: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Function Calling

OP60_Manual();
OP60_AUTOSEQUENCE();
OP60_Error();
OP60_Initialization_Seq();

//MOdeselection From HMI

IF (OP60_HMI_AutoMode AND NOT OP60_HMI_ManualMOde AND NOT OP60_HMI_StepMode) THEN
		OP60_Modeselection_FB.ModeWord:=1;
	ELSIF (NOT OP60_HMI_AutoMode AND OP60_HMI_ManualMOde AND NOT OP60_HMI_StepMode) THEN
		OP60_Modeselection_FB.ModeWord:=2;
	ELSIF  (NOT OP60_HMI_AutoMode AND NOT OP60_HMI_ManualMOde AND  OP60_HMI_StepMode) THEN
		OP60_Modeselection_FB.ModeWord:=3;
    ELSE   
		OP60_Modeselection_FB.ModeWord:=0;
END_IF
OP60_Modeselection_FB(
	ModeWord:= , 
	HomeConditionOK:=OP60_HomeConditionOK , 
	OperationEnable:=OP60_AutoSelected, 
	StartPB:=OP60_HMI_Cycle_Start , 
	SafetyAndNOError:= OP60_Safety_OK, 
	ModeAck:=OP60_Mode_Ack , 
	HomingINProgress:=OP60_HomeRunning , 
	TempHomeOK:=OP60_Temp_hmeOK , 
	ResetPB:= , 
	AutoSelected=> OP60_AutoSelected, 
	ManualSelected=> OP60_ManualSelected, 
	StepSelected=>OP60_StepSelected , 
	ModeSelAck_Indication=> , 
	StatusDisplay=> , 
	AutoRunning:=OP60_AutoRunning, 
	StepRunning:=OP60_StepRunning , 
	StartEnable:=OP60_StartEnable  , 
	MachineStop:=OP60_Machine_Stop );
(*
IF OP60_AutoSelected OR OP60_ManualSelected AND NOT ( OP60_ErrorActive OR OP60_Safety_OK) THEN
	SR60_Vert_servo.bEnable:=TRUE;
ELSE
	SR60_Vert_servo.bEnable:=FALSE;
END_IF

IF OP60_GVL.SR60_Vert_servo.bAxisError OR NOT OP60_Safety_OK  THEN
	OP60_ErrorActive:=TRUE;
END_IF

IF NOT SR60_Vert_servo.bAxisHomed THEN
	SR60_Vert_servo_not_Home:=TRUE;
ELSE
	SR60_Vert_servo_not_Home:=FALSE;
END_IF
*)
	//Cycle Time Block
//	OP60_Cycle_Time(Cycle_Start_Bit:= , Pulse_100ms:=Pulse_100ms , Time_In_Sec=>Times , CT_Running=> );

	
	
	//Pulse Generation 100ms
	TP_100ms(IN:=NOT TP_100ms.Q , PT:=T#100MS , Q=>Pulse_100ms, ET=> );]]></ST>
    </Implementation>
    <LineIds Name="OP60_MAIN">
      <LineId Id="3" Count="59" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>